# isac-uav-sim

./: .gitignore  README.md  environment.yml  requirements-gpu.txt  requirements-hyperdoa.txt  requirements.txt  准研究生过渡期课题规划.docx
channel/: __init__.py  multipath_channel.py  rt_config.py  rt_core.py  rt_dataset.py  rt_echo.py  sionna_rt_channel.py  ula_scene.py
doa/: __init__.py  advanced.py  classical.py  hyperdoa_wrapper.py  isac_doa.py  joint_estimator.py  metrics.py  robust_doa.py
doa/HYPERDOA/: .gitignore  LICENSE  README.md  check_env.py  pyproject.toml  reproduce_paper.py
doa/HYPERDOA/examples/: train_basic.py
doa/HYPERDOA/hyperdoa/: __init__.py  config.py  evaluation.py  models.py  utils.py
doa/HYPERDOA/scripts/: generate_data.py
doa/SubspaceNet/src/: system_model.py
docs/: phase2_execution_notes.md  sionna_learning_guide.md  task3_task4_completion_review.md  transition_plan.md  weekly_report_template.md
experiments/: __init__.py  end2end_config.py  end2end_io.py  end2end_simulator.py  end2end_tasks.py  isac_end2end_simulation.py  phase2_doa_benchmark.py  phase2_tradeoff.py  plot_ula_pattern.py  run_classical_doa_demo.py  run_sionna_smoke_test.py  sionna_nr_ofdm_channel_estimation_basics.py
report/weekly_report/: 模板.pptx  汇报（第一周）.pptx  汇报（第二周）.pptx  第二周汇报内容.md  第二周汇报布局_任务3任务4.md
scripts/: prepare_week1_doa_figures.py
sensing/: __init__.py  range_estimation.py  velocity_estimation.py
waveform/: __init__.py  isac_ofdm.py  isac_waveform.py
