[project]
name = "hyperdoa"
version = "1.0.0"
description = "Hyperdimensional Computing for Direction-of-Arrival Estimation"
readme = "README.md"
authors = [
    {name = "HYPERDOA Authors"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "doa",
    "direction-of-arrival",
    "hdc",
    "hyperdimensional-computing",
    "signal-processing",
    "array-processing",
]
dependencies = [
    "torch>=2.0.0",
    "torch-hd>=0.6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/pwh9882/HYPERDOA"
Repository = "https://github.com/pwh9882/HYPERDOA"
Documentation = "https://github.com/pwh9882/HYPERDOA#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hyperdoa"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hyperdoa"]
